@@ -18,6 +18,7 @@
 	local function parameters are now inferred in several cases
 	optional RTTI for Spod Object
 	bugfix related to callback in neko code generator
+	more type error stack (now includes type parameters)
 
 2007-01-01: 1.10
 	fix in haxe.remoting.SocketConnection.readAnswer
